[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Line 01.png" type="Texture" id=1]
[ext_resource path="res://Assets/black_bg.png" type="Texture" id=2]
[ext_resource path="res://Menu.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/lose.gd" type="Script" id=4]
[ext_resource path="res://Assets/restart.png" type="Texture" id=5]
[ext_resource path="res://Assets/menu.png" type="Texture" id=6]
[ext_resource path="res://Fonts/pricedown bl.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 7 )

[node name="Lose" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 151.5, 320.1 )
scale = Vector2( 0.834239, 0.791832 )
texture = ExtResource( 2 )

[node name="line1" type="Sprite" parent="."]
position = Vector2( 0, 100 )
rotation = 1.5708
scale = Vector2( 0.7, 0.5 )
texture = ExtResource( 1 )

[node name="line2" type="Sprite" parent="."]
position = Vector2( 302, 100 )
rotation = 1.5708
scale = Vector2( 0.7, 0.5 )
texture = ExtResource( 1 )

[node name="Head" type="Label" parent="."]
margin_left = 57.0
margin_top = 56.0
margin_right = 257.0
margin_bottom = 203.0
custom_fonts/font = ExtResource( 3 )
text = "HIT THE 
GOAL"
align = 1
valign = 1
uppercase = true

[node name="score_container" type="VBoxContainer" parent="."]
margin_left = 75.0
margin_top = 217.0
margin_right = 225.0
margin_bottom = 265.0

[node name="score" type="Label" parent="score_container" groups=["current_score"]]
margin_right = 150.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "Score : "
align = 1
valign = 1

[node name="best_score" type="Label" parent="score_container" groups=["best_score"]]
margin_top = 34.0
margin_right = 150.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "best score : "
align = 1
valign = 1
uppercase = true

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = 33.0
margin_right = 171.0
margin_bottom = 211.0
rect_scale = Vector2( 0.7, 0.7 )
custom_constants/separation = -30

[node name="restart_btn" type="TextureButton" parent="Buttons"]
margin_right = 267.0
margin_bottom = 104.0
texture_normal = ExtResource( 5 )

[node name="menu_btn" type="TextureButton" parent="Buttons"]
margin_top = 74.0
margin_right = 267.0
margin_bottom = 178.0
texture_normal = ExtResource( 6 )

[connection signal="button_down" from="Buttons/restart_btn" to="." method="_on_restart_btn_button_down"]
[connection signal="pressed" from="Buttons/restart_btn" to="." method="_on_restart_btn_pressed"]
[connection signal="button_down" from="Buttons/menu_btn" to="." method="_on_menu_btn_button_down"]
[connection signal="pressed" from="Buttons/menu_btn" to="." method="_on_menu_btn_pressed"]
